Added option to server Button as CommandButton (reference prominic/Moonshine-IDE#270)

--- a/src/view/primeFaces/propertyEditors/ButtonPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/ButtonPropertyEditor.mxml
@@ -14,4 +14,7 @@
 	<forms:TextForm label="Value" textProperty="label"/>
 	<forms:TextForm label="Title" textProperty="toolTip"/>
 	<forms:ToggleButtonSelectedForm label="Enabled" textProperty="enabled"/>
+	<forms:ToggleButtonSelectedForm id="cbCommandButton" 
+									label="Command Button" textProperty="isCommandButton"/>
+	<forms:TextForm label="Action Listener" textProperty="actionListener" enabled="{cbCommandButton.check.selected}"/>
 </suportclasses:BasePropertyEditor>
