--- a/src/view/primeFaces/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputTextPropertyEditor.mxml
@@ -26,4 +26,5 @@
 					label="Value" textProperty="text"/>
 	<forms:TextForm label="Maximum Length" textProperty="maxLength"
 					restrict="0-9" change="textform1_changeHandler(event)"/>
+	<forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
 </suportclasses:BasePropertyEditor>
