Add required property to PrimeFaces inputTextarea (reference prominic/Moonshine-IDE#280)

--- a/src/view/primeFaces/propertyEditors/InputTextareaPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputTextareaPropertyEditor.mxml
@@ -28,6 +28,7 @@
 					label="Value" textProperty="text"/>
 	<forms:TextForm label="Maximum Length" textProperty="maxLength"
 					restrict="0-9" change="textform1_changeHandler(event)"/>
+	<forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
 	<forms:ToggleButtonSelectedForm label="Auto Resize" textProperty="isAutoResize"/>
 	<forms:ToggleButtonSelectedForm label="Display As Counter" textProperty="isCounterDisplay"/>
 	<forms:TextForm label="Displaying Component's Id" textProperty="counter"
