Documentation: Add property required to all PrimeFaces input components along with documentation (reference prominic/Moonshine-IDE#280)

--- a/src/view/primeFaces/propertyEditors/InputMaskPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputMaskPropertyEditor.mxml
@@ -11,4 +11,5 @@
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
     <forms:TextForm label="Mask: '9'(0-9), '*'(a-z, A-Z)" textProperty="maskText"/>
     <primeFaces:MaskedTextInputForm label="Value" textProperty="text" bindableMaskText="{selectedItem['maskText']}"/>
+    <forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
 </suportclasses:BasePropertyEditor>
