--- a/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
@@ -35,7 +35,7 @@
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     <forms:DropdownListForm id="ddl" 
-							label="File Name" textProperty="title" 
+							label="File Name" textProperty="path"
 							collectionProperty="filesList" labelField="resourcePath"/> <!-- _this_ not constructed to use in binding will throw compiler warning -->
 
 </suportclasses:BasePropertyEditor>
