--- a/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
@@ -9,8 +9,8 @@
 
 	<primeFaces:BasicsForm/>
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
-    <forms:TextForm label="Value" textProperty="text" restrict="0-9"/>
+    <forms:TextForm label="Value" textProperty="text" restrict=".0-9"/>
     <forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
-    <forms:TextForm label="Decimal separator char" textProperty="decimalSeparator" maxChar="1" restrict="0-9"/>
-    <forms:TextForm label="Thousand separator char" textProperty="thousandSeparator" maxChar="1" restrict="0-9"/>
+    <forms:TextForm label="Decimal separator char" textProperty="decimalSeparator" maxChar="1"/>
+    <forms:TextForm label="Thousand separator char" textProperty="thousandSeparator" maxChar="1"/>
 </suportclasses:BasePropertyEditor>
