InputNumber: Add dynamic change of text after modification thousands or decimal separator (reference prominic/Moonshine-IDE#260)

--- a/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/InputNumberPropertyEditor.mxml
@@ -9,7 +9,7 @@
 
 	<primeFaces:BasicsForm/>
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
-    <forms:TextForm label="Value" textProperty="text" restrict=".0-9"/>
+    <primeFaces:TextInputNumberForm label="Value" textProperty="text"/>
     <forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
     <forms:TextForm label="Decimal separator char" textProperty="decimalSeparator" maxChar="1"/>
     <forms:TextForm label="Thousand separator char" textProperty="thousandSeparator" maxChar="1"/>
