Minor field updates (reference prominic/Moonshine-IDE#289)

--- a/src/view/primeFaces/forms/renderer/IncludeDropdownListRenderer.mxml
+++ b/src/view/primeFaces/forms/renderer/IncludeDropdownListRenderer.mxml
@@ -35,7 +35,7 @@
 		]]>
 	</fx:Script>
 	
-	<s:Label id="txtLabel" text="{data.resourcePath}"
+	<s:Label id="txtLabel" text="{data.resourcePathWithoutRoot}"
 			 verticalCenter="0" left="4" right="4"
 			 maxDisplayedLines="1" mouseChildren="false" mouseFocusEnabled="false"/>
 </s:ItemRenderer>
